<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:layout_weight="1"
    android:fillViewport="true">

    <RelativeLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp200"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginTop="@dimen/dp5" />


        <org.florescu.android.rangeseekbar.RangeSeekBar
            android:id="@+id/rangeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/videoView"
            android:layout_marginTop="@dimen/dp5"
            app:showLabels="false"
            rsb:activeColor="#ED1C24"
            rsb:textAboveThumbsColor="#000000" />

        <TextView
            android:id="@+id/tvLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rangeSeekBar"
            android:layout_alignStart="@+id/rangeSeekBar"
            android:layout_below="@+id/rangeSeekBar"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/rangeSeekBar"
            android:layout_alignRight="@+id/rangeSeekBar"
            android:layout_below="@+id/rangeSeekBar"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRight"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dp5"
            android:gravity="center"
            android:text="@string/rangeSeekBarText"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/uploadVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvInstructions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp5"
            android:background="@drawable/upload_video_selector"
            android:gravity="center"
            android:padding="@dimen/dp5"
            android:text="@string/uploadVideo"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/sp16" />

        <TableLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/uploadVideo"
            android:layout_marginTop="@dimen/dp5"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">

            <TableRow>

                <TextView
                    android:id="@+id/compressVideo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/compress_video_selector"
                    android:gravity="center"
                    android:padding="@dimen/dp2"
                    android:text="@string/compressVideo"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/cropVideo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/crop_video_selector"
                    android:gravity="center"
                    android:padding="@dimen/dp2"
                    android:text="@string/cutVideo"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/extractImages"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/extract_images_selector"
                    android:gravity="center"
                    android:padding="@dimen/dp2"
                    android:text="@string/extractImages"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/extractAudio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/extract_audio_selector"
                    android:gravity="center"
                    android:padding="@dimen/dp2"
                    android:text="@string/extractAudio"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/sp16" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/fadeEffect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/fade_video_selector"
                    android:gravity="center"
                    android:padding="@dimen/dp2"
                    android:text="@string/addFade"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/increaseSpeed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/increase_speed_selector"
                    android:gravity="center"
                    android:padding="@dimen/dp2"
                    android:text="@string/increaseSpeed"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/decreaseSpeed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/slow_video_selector"
                    android:gravity="center"
                    android:padding="@dimen/dp2"
                    android:text="@string/decreaseSpeed"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/reverseVideo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/reverse_video_selector"
                    android:gravity="center"
                    android:padding="@dimen/dp2"
                    android:text="@string/reverseVideo"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/sp16" />
            </TableRow>
        </TableLayout>


    </RelativeLayout>
</ScrollView>